msg/async: avoid requeue racing with handle_write

when the thread is calling AsyncConnection::handle_write, another thread may
replace it and requeue all messages. Because we remove the write_lock
protection for handle_write caller, it may happen sent racing with out_q

Fix: http://tracker.ceph.com/issues/20093

Signed-off-by: Haomai Wang <haomai@xsky.com>